3542.	[bug]		masterformat system test was broken. [RT #33086]

3540.	[bug]		libt_api: t_info and t_assert were not thread safe.

	--- 9.6-ESV-R9rc1 released ---

3539.	[port]		win32: timestamp format didn't match other platforms.

3538.	[test]		Running "make test" now requires loopback interfaces
			to be set up. [RT #32452]

3535.	[bug]		Minor win32 cleanups. [RT #32962]

3534.	[bug]		Extra text after an embedded NULL was ignored when
			parsing zone files. [RT #32699]

3533.	[contrib]	query-loc-0.4.0: memory leaks. [RT #32960]

3532.	[contrib]	zkt: fixed buffer overrun, resource leaks. [RT #32960]

3531.	[bug]		win32: A uninitialized value could be returned on out
			of memory. [RT #32960]

3530.	[contrib]	Better RTT tracking in queryperf. [RT #30128]

3526.	[cleanup]	Set up dependencies for unit tests correctly during
			build. [RT #32803]

3520.	[bug]		'mctx' was not being referenced counted in some places
			where it should have been.  [RT #32794]

	--- 9.6-ESV-R9b2 released ---

3517.	[bug]		Reorder destruction to avoid shutdown race. [RT #32777]

3515.	[port]		'%T' is not portable in strftime(). [RT #32763]

3509.	[cleanup]	Added a product line to version file to allow for
			easy naming of different products (BIND
			vs BIND ESV, for example). [RT #32755]

3508.	[contrib]	queryperf was incorrectly rejecting the -T option.
			[RT #32338]

3503.	[doc]		Clarify size_spec syntax. [RT #32449]

3499.	[doc]		Corrected ARM documentation of built-in zones.
			[RT #32694]

3498.	[bug]		zone statistics for zones which matched a potential
			empty zone could have their zone-statistics setting
			overridden.

3489.	[bug]		--enable-developer now turns on ISC_LIST_CHECKINIT.
			When cloning a rdataset do not copy the link contents.
			[RT #32651]

3487.	[bug]		Change 3444 was not complete.  There was a additional
			place where the NOQNAME proof needed to be saved.
			[RT #32629]

3481.	[cleanup]	removed use of const const in atf
